# GenerativeAiApplicationsWithPython_Material

./: .gitignore  README.md  pyproject.toml
02_PreTrainedNetworks/: 20_translation.py  40_text_to_audio.py  50_zero_shot.py  60_ner.py  70_qa.py  80_fill_mask.py  90_capstone_start.py  91_capstone_end.py
03_LLMs/: 10_model_chat_openai.py  20_model_chat_groq.py  42_chain_game.py  45_semantic_router.py  60_multimodal.py  70_ollama.py  80_llm_stay_on_topic.py  90_llm_llamaguard.py  test2.py
04_PromptEngineering/: 10_few_shot.py  20_prompt_chaining.py  30_self_consistency.py  40_self_feedback.py
05_VectorDatabases/10_DataLoader/: 50_custom_loader_exercise.py  60_custom_loader_solution.py
06_RAG/: 10_simple_RAG.py  20_hybrid_search.py  25_BM25_TFIDF.py  30_hybrid_RAG.py  40_prompt_caching.py  50_contextual_retriever.py  60_rag_eval.py  90_query_expansion.py  95_prompt_compression.py
07_AgenticSystems/: 10_agentic_rag.py  20_react.py  30_decorators.py
07_AgenticSystems/ag2/: 10_ag2_intro.py  15_ag2_conversable_agent.py  20_ag2_conversation.py  40_ag2_tools.py  50_ag2_two_agents_chat.py  60_ag2_conversation_agentops.py  ag2_setup_docker.py
07_AgenticSystems/ai_security/: README.md  pyproject.toml  report.md
07_AgenticSystems/langgraph/: 10_langgraph_simple_assistant.py  11_langgraph_router.py  12_langgraph_tools.py  13_langgraph_mult_tools.py
07_AgenticSystems/news_analysis/: pyproject.toml  report.md
07_AgenticSystems/openai_agents/: agents_handoff.py  agents_multiple_agents.py  agents_tools.py
07_AgenticSystems/swarm/: swarm_multiple_agents.py  (+2 more)
(+6 files in other folders)
